# aravoxel-cpp

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main  main.cpp
src/engine/: aravoxel.cpp  aravoxel.hpp  engine.hpp  resourceManager.cpp  resourceManager.hpp  settings.cpp  settings.hpp  vertexArrayObject.cpp  vertexArrayObject.hpp
src/engine/resources/: shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp
src/entities/: debugCamera.cpp  debugCamera.hpp
src/meshes/: baseMesh.cpp  baseMesh.hpp  cubeMesh.cpp  cubeMesh.hpp  rectangleMesh.cpp  rectangleMesh.hpp
src/scenes/: testScene.cpp  testScene.hpp  voxelWorld.cpp  voxelWorld.hpp
src/shaders/: test.fs  test.vert  test.vs
src/util/: timer.cpp  timer.hpp
